syntax = "proto3";

import "common.proto";

option java_package = "com.alibaba.maxgraph.proto.v2";
option java_multiple_files = true;

service StoreIngest {
    rpc storeIngest(StoreIngestRequest) returns(StoreIngestResponse);
}

message StoreIngestRequest {
    string dataPath = 1;
}

message StoreIngestResponse {

}
